[package]
name = "jason-rs"
version = "0.2.3"
edition = "2021"                
authors = ["Alexander Meade <thisguys348@gmail.com>"]
description = "A library for parsing Jason-like files into JSON, YAML, or TOML with support for inline file expansion."
license = "Apache-2.0"
repository = "https://github.com/alexandermeade/jason-rs"
readme = "README.md"
keywords = ["json", "yaml", "toml", "parser", "config"]
categories = ["encoding", "parser-implementations"]
documentation = "https://docs.rs/jason-rs"

[lib]
name = "jason_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
log = "0.4"          # logging macros
env_logger = "0.10"  # simple environment-based logger

