[package]
name = "jason-rs"
version = "0.2.19"
edition = "2021"
authors = ["Alexander Meade <thisguys348@gmail.com>"]
description = "A library for parsing Jason-like files into JSON, YAML, or TOML with support for inline file expansion."
license = "Apache-2.0"
repository = "https://github.com/alexandermeade/jason-rs"
readme = "README.md"
keywords = ["json", "yaml", "toml", "parser", "config"]
categories = ["encoding", "parser-implementations"]
documentation = "https://docs.rs/jason-rs"

[lib]
name = "jason_rs"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
include_dir = "0.7.4"
rand = "0.9.2"
unicode-width = "0.2.2"

mlua = { version = "0.10", default-features = false, features = ["serialize"], optional = true }

mlua-luajit = { package = "mlua", version = "0.10", default-features = false,  features = ["serialize", "luajit"], optional = true }

mlua-lua = { package = "mlua", version = "0.10", default-features = false, features = ["serialize", "lua54"], optional = true }

[features]
default = ["luajit"]

luajit = ["mlua-luajit"]
lua = ["mlua-lua"]        # enable standard Lua 5.4

